--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=Spring-JWT-Authentication
+
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt-auth?createDatabaseIfNotExist=
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jwt.secret=secret_key
+spring.jwt.expiration=3600000  # 1 hour
+spring.jwt.refresh-expiration=604800000 # 7 days
