--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jwt.secret=secret_key
-spring.jwt.expiration=3600000  # 1 hour
-spring.jwt.refresh-expiration=604800000 # 7 days
+jwt.secret-key=secret_key=5i9p9gc7OQKFrnB1QyGcIkkBZhwKK28VJbeM69UvGs4=
+jwt.access-expiration=3600000  # 1 hour
+jwt.refresh-expiration=604800000 # 7 days
