--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Spring-JWT-Authentication
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jwt-auth?createDatabaseIfNotExist=
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt_auth?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-jwt.secret-key=secret_key=5i9p9gc7OQKFrnB1QyGcIkkBZhwKK28VJbeM69UvGs4=
-jwt.access-expiration=3600000  # 1 hour
-jwt.refresh-expiration=604800000 # 7 days
+jwt.secret-key=5i9p9gc7OQKFrnB1QyGcIkkBZhwKK28VJbeM69UvGs4=
+jwt.access-expiration=3600000
+jwt.refresh-expiration=604800000
